; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_printf.c_renderLogMsg.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_printf.c_renderLogMsg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 (i32, i32, i32)* }

@SQLITE_PRINT_BUF_SIZE = common dso_local global i32 0, align 4
@sqlite3GlobalConfig = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @renderLogMsg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @renderLogMsg(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* @SQLITE_PRINT_BUF_SIZE, align 4
  %11 = mul nsw i32 %10, 3
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %8, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %9, align 8
  %15 = trunc i64 %12 to i32
  %16 = call i32 @sqlite3StrAccumInit(i32* %7, i32 0, i8* %14, i32 %15, i32 0)
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @sqlite3_str_vappendf(i32* %7, i8* %17, i32 %18)
  %20 = load i32 (i32, i32, i32)*, i32 (i32, i32, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sqlite3GlobalConfig, i32 0, i32 1), align 8
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @sqlite3GlobalConfig, i32 0, i32 0), align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @sqlite3StrAccumFinish(i32* %7)
  %24 = call i32 %20(i32 %21, i32 %22, i32 %23)
  %25 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %25)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @sqlite3StrAccumInit(i32*, i32, i8*, i32, i32) #2

declare dso_local i32 @sqlite3_str_vappendf(i32*, i8*, i32) #2

declare dso_local i32 @sqlite3StrAccumFinish(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
